--- a/chartingMap.html
+++ b/chartingMap.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/leaflet.css" />
+    <link rel="stylesheet" href="css/reset.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
@@ -20,7 +22,20 @@
     <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
-	<div id="map"></div>
+    <!-- <a class="button" href="#popup">Open Modal</a> -->
+    <div class="popup" id="popup">
+        <div class="popup-inner">
+            <div class="popup__text">
+                <h1>交互操作</h1>
+                <p>此交互用户可以进行预定和购买操作</p>
+                <a class="popup__btn" href="#" style="position: absolute;bottom: 10px;left: 30px;">预定</a>
+                <a class="popup__btn" href="#" style="position: absolute;bottom: 10px;right: 30px;">购买</a>
+            </div>
+            <a class="popup__close" href="#">X</a>
+        </div>
+        </div>
+    <div id="map"></div>
+    
 	<script>
 		//jQuery.ajaxSetup({cache: true})//jquery缓存页面 
 	    window.onload = function(){
